--- a/src/components/Bio/Bio.css
+++ b/src/components/Bio/Bio.css
@@ -1,33 +1,37 @@
 .bio-container{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 4vw;
-    margin-top: 3em;
+    justify-content: space-evenly;
+    gap: 2em;
+    margin-top: 5em;
+    
     
 }
 
-.bio-container img{
+.biocard img{
     border-radius: 3px;
     box-shadow: 3px 3px 7px 2px rgba(160, 77, 49, 1);
-    height: 400px;
-    width: 300px;
-
-    
+    height: 60vh;
+    width: auto;
 }
-#aboutMe{
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
+
+.biocard{
+    display:flex;
     flex-direction: column;
+    gap: 2em;
     align-items: center;
-    width: 800px;
-    text-align: center;
-    line-height: 160%;
 }
 
+.text{
+    width: 30vw;
+}
 
-p{justify-content: center;}
-.bio-card{
-    border: solid 1px rgba(160, 77, 49, 1);
+@media only screen and (max-width: 700px){
+    .bio-container{
+        display:flex;
+        flex-direction: column;
+    }
+    .text{
+        padding: 0em 2em;
+        width: auto;
+    }
 }
